# netlist-paths-tests

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  definitions.py.in  rsd.Makefile.netlist-paths.mk  test_nvdla.py  test_picorv32.py  test_rsd.py  tests.py
.github/workflows/: build-and-test.yml
